# quarrel

./: .gitignore  CLAUDE.md  Dockerfile  README.md  nixpacks.toml  package.json  turbo.json
.github/workflows/: claude.yml  desktop-release.yml
apps/api/: package.json
apps/api/src/: index.ts  ws.ts
apps/api/src/__tests__/: auditLog.test.ts  auth.test.ts  bans.test.ts  botConnection.test.ts  botHandler.test.ts  bots.test.ts  bulkDelete.test.ts  channels.test.ts  dms.test.ts  embeds.test.ts  errorHandler.test.ts  friends.test.ts  helpers.ts  invites.test.ts  messages.test.ts  pins.test.ts  profiles.test.ts  ratelimit.test.ts  reactions.test.ts  readState.test.ts  roles.test.ts  search.test.ts  security-data.test.ts  security-low.test.ts  security-utils.ts  serverDescription.test.ts  servers.test.ts  settings.test.ts  threads.test.ts  timeouts.test.ts  users.test.ts  ws.test.ts
apps/api/src/lib/: aiProviders.ts  analytics.ts  auditLog.ts  botHandler.ts  permissions.ts  r2.ts  (+2 more)
apps/desktop/: package.json
apps/desktop/scripts/: ios-build.mjs
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: .env.desktop  capacitor.config.ts  index.html  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
apps/web/e2e/: auth.spec.ts  dms.spec.ts  fixtures.ts  friends.spec.ts  invites.spec.ts  messages.spec.ts  profiles.spec.ts  servers.spec.ts
apps/web/src/: App.tsx  index.css  main.tsx
(+119 files in other folders)
