[package]
name = "quarrel-desktop"
version = "1.0.6"
edition = "2021"

[lib]
name = "quarrel_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
tauri-plugin-shell = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
